# ApproxLM

./: .gitignore  LICENSE  MANIFEST.in  README.md  run_experiment.py  setup.cfg  streamlit_app.py
examples/: qwen_headless.yaml  xlmr_headless.py  xlmr_headless.yaml
hardware/rtl/approximate/: mul8s_1KVA.v
hardware/rtl/helpers/: arithmetic_helpers.v
recipes/: qwen2_blockwise.yaml  qwen2_layerwise.yaml  xlmr_blockwise.yaml  xlmr_layerwise.yaml
src/approxlm/: __init__.py  hardware.py
src/approxlm/adapters/hardware/: __init__.py  characterization.py  errors.py  opensta.py  parsers.py  scripts.py  toolchain.py  yosys.py
src/approxlm/adapters/huggingface/: datasets.py  decoder_eval.py  evaluation.py
src/approxlm/adapters/persistence/: sqlite.py
src/approxlm/adapters/pytorch/: matmul.py  profiler.py  quantized_linear.py
src/approxlm/application/: analysis.py  characterize_hardware.py  defaults.py  dispatcher.py  experiments.py  luts.py  matmul_analysis.py  runtime.py
src/approxlm/cli/: dispatch.py  main.py
src/approxlm/domain/: config.py  hardware.py  quantization.py  specs.py
src/approxlm/interfaces/streamlit/: app.py  config.py  experiment_app.py
src/approxlm/interfaces/yaml/: loader.py
src/approxlm/ports/: dataset.py  evaluator.py  hardware.py  model.py  persistence.py
src/approxlm/quantization/: builder.py  params.py
src/approxlm/quantization/calibration/: base.py  histogram.py
src/approxlm/resources/dispatcher_configs/: decoder_only_alpaca_non_attention_all_multipliers.yaml  decoder_rest.yaml  decoder_wiki2_25k_mlp_layerwise_24.yaml  (+14 more)
(+11 files in other folders)
