[metadata]
name = approxlm
version = 0.1.0
description = PyTorch framework for evaluating approximate multipliers in language models
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.24
    pandas>=2.0
    torch>=2.1
    transformers>=4.40
    datasets>=2.18
    scikit-learn>=1.3
    PyYAML>=6.0
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
approxlm =
    resources/dispatcher_configs/*.yaml
    resources/luts/*.npy

[options.extras_require]
gui =
    streamlit>=1.32
    altair>=5.0
cuda =
    triton>=2.1
quantized-models =
    accelerate>=0.29
    optimum>=1.18
    auto-gptq>=0.7
metrics =
    sentencepiece>=0.2
    protobuf>=4.25
dev =
    pytest>=8
    ruff>=0.4
    mypy>=1.9
    build>=1.2

[options.entry_points]
console_scripts =
    approxlm = approxlm.cli.main:main
    approxlm-alpaca = approxlm.cli.alpaca:main
    approxlm-dispatch = approxlm.cli.dispatch:main

[tool:pytest]
testpaths = tests

[flake8]
max-line-length = 120
